# LingCorpus-Platform

./: .gitignore  README.md  pyproject.toml  run.bat  run.sh
.github/workflows/: ci.yml
src/lingcorpus/: __init__.py  __main__.py  app.py  auth.py  config.py  dashboard.py  database.py  models.py  schemas.py
src/lingcorpus/api/: analysis.py  corpus.py  users.py
src/lingcorpus/services/: __init__.py  audit_service.py  corpus_service.py  nlp_service.py  validation_service.py
tests/: conftest.py  test_auth.py  test_corpus.py  test_nlp.py  test_validation.py
